k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: image-processing-tool
  labels:
    name: image-processing-tool
